--- a/amit_logins/templates/logins/base.html
+++ b/amit_logins/templates/logins/base.html
@@ -147,13 +147,13 @@ h2{
     }
 
     .btn-primary {
-        background-color: #0157ad;
-        border-color: #0066cc;
+        background-color: #168183;
+        border-color: #168183;
     }
 
     .btn-primary:hover {
-        background-color: #004c99;
-        border-color: #004c99;
+        background-color: #0a9396;
+        border-color: #168183;
     }
 
     .btn-success {
@@ -297,7 +297,7 @@ h2{
   <div class="container-fluid">
     <!-- Brand -->
     <a class="navbar-brand fw-bold text-uppercase" href="#">
-      <i class="fa-solid fa-gear me-2"></i>AMIT
+      AMIT
     </a>
 
     <!-- Mobile Toggle -->
