--- a/amit_logins/templates/logins/employee_dashboard_nagercoil.html
+++ b/amit_logins/templates/logins/employee_dashboard_nagercoil.html
@@ -6,12 +6,12 @@
 
     <div class="d-flex justify-content-center align-items-center flex-wrap gap-5 mt-5" >
         <a href="{% url 'work_status_group_list' %}" class="btn  btn-upload">
-             <div class="box text-light bg-primary">UPLOAD WORK STATUS</div>
+             <div class="box text-light btn-primary">UPLOAD WORK STATUS</div>
         </a>
 
      {% if request.user.is_team_leader %}
         <a href="{% url 'workstatus_branch_list' %}" class="btn  text-light">
-            <div class="box text-light bg-primary">TEAM MEMBERS WORK STATUS</div>
+            <div class="box text-light btn-primary">TEAM MEMBERS WORK STATUS</div>
         </a>
     {% endif %}
     
