--- a/amit_logins/templates/workstatus/work_status_group_list.html
+++ b/amit_logins/templates/workstatus/work_status_group_list.html
@@ -37,7 +37,7 @@
         {% endfor %}
     </select>
 
-    <button type="submit" class="btn btn-success">DOWNLOAD EXCEL</button>
+    <button type="submit" class="btn btn-light">DOWNLOAD EXCEL</button>
         <a href="{% url 'create_work_status_group' %}" class="btn btn-primary ">CREATE NEW</a>
 
 </form>
