--- a/amit_logins/templates/workstatus/work_status_group_list.html
+++ b/amit_logins/templates/workstatus/work_status_group_list.html
@@ -109,10 +109,25 @@
                     <a href="{% url 'add_work_status' group.id %}" class="btn btn-sm btn-secondary mt-2">ADD WORK DETAILS</a>
                     </center>
                 </td>
-                <td class="text-center ">
-                    <a href="{% url 'edit_work_status_group' group.id %}" class="btn btn-warning btn-sm">EDIT</a><br>
-                    <a href="{% url 'delete_work_status_group' group.id %}" class="btn btn-danger btn-sm mt-2"
-                       onclick="return confirm('Are you sure you want to delete this group?');">DELETE</a>
+                <td class="text-center">
+                <div class="dropdown">
+                    <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="actionMenu{{ group.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+                    Actions
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="actionMenu{{ group.id }}">
+                    <li>
+                        <a class="dropdown-item text-warning" href="{% url 'edit_work_status_group' group.id %}">
+                        <i class="bi bi-pencil-square"></i> Edit
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item text-danger" href="{% url 'delete_work_status_group' group.id %}" 
+                        onclick="return confirm('Are you sure you want to delete this group?');">
+                        <i class="bi bi-trash"></i> Delete
+                        </a>
+                    </li>
+                    </ul>
+                </div>
                 </td>
             </tr>
             {% empty %}
