--- a/amit_logins/templates/logins/login.html
+++ b/amit_logins/templates/logins/login.html
@@ -147,7 +147,7 @@
 
   <div class="login-container">
     <h1>ATHITH MITHRA</h1>
-    <h2>Industrial Technologies Private Ltd.</h2>
+    <h2>Industrial Technologies Pvt Ltd.</h2>
 
     <div class="brand-logo">
       <img src="{% static 'images/logo.png' %}" alt="Logo">
