--- a/amit_logins/templates/logins/base.html
+++ b/amit_logins/templates/logins/base.html
@@ -120,7 +120,7 @@ h2{
         border-collapse: separate !important;
         border-spacing: 0;
         border-radius: 12px;
-        overflow: hidden;
+        /* overflow: hidden; */
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
         background-color: #fff;
     }
