--- a/amit_logins/templates/logins/register.html
+++ b/amit_logins/templates/logins/register.html
@@ -203,7 +203,7 @@
     </form>
 
     <footer>
-      © 2025 ABTECH WORKS | All Rights Reserved
+      © 2025 AMIT | All Rights Reserved
     </footer>
   </div>
 
